# narendra-ai-labs

./: .gitignore
AI_Comparison_Portal/: README.md  index.html  script.js  styles.css
Always-On-Meeting-Intellegence/: .env.example  config.yaml  setup.py
Always-On-Meeting-Intellegence/src/: __init__.py  main.py
Always-On-Meeting-Intellegence/src/audio/: detector.py  recorder.py
Always-On-Meeting-Intellegence/src/config/: settings.py
Always-On-Meeting-Intellegence/src/integrations/: asana_integration.py
Always-On-Meeting-Intellegence/src/transcription/: __init__.py  speaker_diarization.py
Always-On-Meeting-Intellegence/tests/: __init__.py
Always-On-Meeting-Intelligence/: .gitignore  AGENT.md  QUICKSTART.md  README.md  requirements.txt
Always-On-Meeting-Intelligence/src/audio/: __init__.py  audio_utils.py
Always-On-Meeting-Intelligence/src/integrations/: jira_integration.py
Always-On-Meeting-Intelligence/src/intelligence/: __init__.py  action_extractor.py  notes_generator.py  query_engine.py
Always-On-Meeting-Intelligence/src/storage/: database.py
Always-On-Meeting-Intelligence/src/transcription/: transcriber.py
Always-On-Meeting-Intelligence/tests/: test_core.py
Naukri-Profile-Tracker/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
Naukri-Profile-Tracker/data/: .gitkeep
Naukri-Profile-Tracker/logs/: .gitkeep
Naukri-Profile-Tracker/src/: __init__.py  config.py  database.py  job_tracker.py  naukri_agent.py  notifier.py  recruiter_tracker.py  resume_manager.py  scheduler.py
Naukri-Profile-Tracker/tests/: test_agent.py
OrgChat_Creater/: .gitignore  LICENSE  README.md  app.js  index.html  sample.csv  styles.css
TrackMyCalendar/: .env.example  .gitignore  README.md  config.py  main.py  requirements.txt  setup.py
TrackMyCalendar/calendar_tracker/: __init__.py  google_calendar.py  icalendar_reader.py  models.py  notification.py  outlook_calendar.py  scheduler.py
